# vkdf

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  Makefile.am  README  autogen.sh  configure.ac
cmake/: build-shaders.cmake  copy-data.cmake
data/: Makefile.am
data/glsl/: lighting.glsl  util.glsl
data/spirv/: CMakeLists.txt  Makefile.am  brightness.frag  brightness.vert  fxaa.frag  shadow-map.vert  ssao-blur.deferred.frag  ssao-blur.deferred.frag.input  ssao.deferred.frag  ssao.deferred.frag.input  ssao.deferred.vert  ssr-blend.frag  ssr-blur.frag  ssr-blur.vert  ssr.frag  ssr.vert  tone-map.frag  tone-map.vert
demos/: Makefile.am
demos/cpu-particle-source/: Makefile.am  main.cpp  particle.frag  particle.vert
demos/depth/: CMakeLists.txt  Makefile.am  main.cpp  shader.frag  shader.vert
demos/light/: Makefile.am  main.cpp  shader.frag  shader.vert
demos/mesh/: CMakeLists.txt  Makefile.am  main.cpp  shader.frag  shader.vert
demos/model/: CMakeLists.txt  Makefile.am  main.cpp  shader.frag  shader.frag.input  shader.vert
demos/offscreen/: CMakeLists.txt  Makefile.am  main.cpp  shader.frag  shader.vert
demos/pbr/: CMakeLists.txt  Makefile.am  main.cpp  pbr.glsl  shader-ibl-cubemap.frag  shader-ibl-cubemap.vert  shader-ibl-tex.frag.input  shader-ibl.frag.input  shader-tex.frag.input  shader-tex.vert  shader.frag.input  shader.vert
demos/scene/: CMakeLists.txt  Makefile.am  main.cpp  scene.frag  scene.vert
demos/scenelight/: CMakeLists.txt  Makefile.am  debug-tile.frag  debug-tile.vert  floor.frag.input  floor.vert  gencolor.glsl  main.cpp  obj.frag.input  obj.vert
demos/shadow/: CMakeLists.txt  Makefile.am  main.cpp  shader.frag  shader.frag.input  shader.vert  shadow.vert  ui-tile.frag  ui-tile.vert
demos/small-clear/: Makefile.am  main.cpp
demos/small-render/: Makefile.am  main.cpp  shader.frag  shader.vert
demos/small-render-wsi/: Makefile.am  main.cpp  shader.frag  shader.vert
demos/sponza/: CMakeLists.txt  Makefile.am  README  compute_deferred_lighting.glsl  compute_forward_lighting.glsl  compute_frag_color.glsl  compute_gbuffer.glsl  debug-tile.frag  debug-tile.vert  download-textures.sh  gbuffer-merge.frag.input  gbuffer-merge.ssao.frag.input  main.cpp  obj.deferred.frag.input  obj.deferred.vert.input  obj.depthprepass.opacity.frag  obj.depthprepass.opacity.vert  obj.depthprepass.vert  obj.frag.input  obj.vert.input  obj_opacity.deferred.frag.input  obj_opacity.frag.input  sponza.mtl
demos/sponza/data/: sponza.mtl
demos/sponza/data/textures/: sponza_thorn_diff.tga
demos/ssbo/: Makefile.am  gen_vertex_shader.py  gen_vertex_shader.py.in  main.cpp  shader.vert  shader.vert.mako
demos/texture/: CMakeLists.txt  Makefile.am  main.cpp  shader.frag  shader.vert
demos/triangle/: CMakeLists.txt  Makefile.am  main.cpp  shader.vert
framework/: Makefile.am  vkdf-barrier.cpp  vkdf-barrier.hpp  vkdf-box.cpp  vkdf-box.hpp  vkdf-buffer.cpp  vkdf-buffer.hpp  vkdf-camera.cpp  vkdf-camera.hpp  vkdf-cmd-buffer.cpp  vkdf-cmd-buffer.hpp  vkdf-cpu-particle-source-renderer.cpp  vkdf-cpu-particle-source-renderer.hpp  vkdf-cpu-particle-source.cpp  vkdf-cpu-particle-source.hpp  vkdf-deps.hpp  vkdf-descriptor.cpp  vkdf-descriptor.hpp  vkdf-error.cpp  vkdf-error.hpp  vkdf-event-loop.cpp  vkdf-event-loop.hpp  vkdf-framebuffer.cpp  vkdf-framebuffer.hpp  vkdf-frustum.cpp  vkdf-frustum.hpp  vkdf-image.cpp  vkdf-image.hpp  vkdf-init-priv.hpp  vkdf-init.cpp  vkdf-init.hpp  vkdf-light.cpp  vkdf-light.hpp  vkdf-memory.cpp  vkdf-memory.hpp  vkdf-mesh.cpp  vkdf-mesh.hpp  vkdf-model.cpp  vkdf-model.hpp  vkdf-object.cpp  (+30 more)
scripts/: fixup-glsl.py
