SUBDIRS = data framework demos

MAINTAINERCLEANFILES = \
        aclocal.m4 \
        compile \
      	config.guess \
        config.sub \
        configure \
      	depcomp \
	install-sh \
      	ltmain.sh \
      	missing \
      	libtool \
      	stamp-h1 \
      	*.in \
      	*.make \
      	mkinstalldirs \
      	*~

DISTCLEANFILES = $(MAINTAINERCLEANFILES)
