SUBDIRS = triangle \
          offscreen \
          texture \
          depth \
          mesh \
          model \
          pbr \
          shadow \
          scene \
          scenelight \
          sponza

MAINTAINERCLEANFILES = \
        *.in \
        *~

DISTCLEANFILES = $(MAINTAINERCLEANFILES)

