SUBDIRS = triangle \
          offscreen \
          texture \
          depth \
          mesh \
          model \
          pbr \
          shadow \
          scene \
          scenelight \
          sponza \
          cpu-particle-source

MAINTAINERCLEANFILES = \
        *.in \
        *~

DISTCLEANFILES = $(MAINTAINERCLEANFILES)

