SUBDIRS = triangle \
          offscreen \
          texture \
          depth \
          mesh \
          model \
          pbr \
          shadow \
          scene \
          scenelight \
          sponza \
          cpu-particle-source \
          small-clear \
          small-render \
          small-render-wsi

MAINTAINERCLEANFILES = \
        *.in \
        *~

DISTCLEANFILES = $(MAINTAINERCLEANFILES)

