include(${CMAKE_CURRENT_SOURCE_DIR}/../../cmake/build-shaders.cmake)

SET(EXAMPLE_NAME depth)

build_shaders()

add_executable(${EXAMPLE_NAME} main.cpp ${SHADER_OUTPUTS} ${GEN_SHADER_OUTPUTS})

TARGET_INCLUDE_DIRECTORIES(${EXAMPLE_NAME} PRIVATE
	${GLIB2_INCLUDE_DIR}
	${VKDF_INCLUDE_DIR}
)

TARGET_LINK_LIBRARIES(${EXAMPLE_NAME}
	vkdf
)
